Added video scripts to vide.ejs

--- a/themes/custom/layout/_partial/video.ejs
+++ b/themes/custom/layout/_partial/video.ejs
@@ -3,3 +3,8 @@
         <source src='/css/images/axn-creative-web-video.MOV' type="video/mp4">
     </video>
 </div>
+<script>
+    // Get the video
+    var video = document.getElementById("myVideo");
+    video.playbackRate = 0.7;
+</script>
