--- a/themes/custom/layout/_partial/head.ejs
+++ b/themes/custom/layout/_partial/head.ejs
@@ -2,6 +2,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <%- css(path, '/css/style.css') %>
+    <link rel="stylesheet" href="/css/style.css">
     <title>AXN Creative</title>
 </head>
