--- a/themes/custom/layout/_partial/nav.ejs
+++ b/themes/custom/layout/_partial/nav.ejs
@@ -1,6 +1,6 @@
 <div class="nav">
     <div class="brand">
-
+        
     </div>
     <div class="navbar">
         <!-- Pull each menu item in from the local _config.yml file -->
@@ -12,5 +12,15 @@
         <a href="#" target='_blank'></a>
         <a href="#" target='_blank'></a>
         <a href="#" target='_blank'></a>
+    </div>
+    <div class='hamburger' onclick='hamburgerClick(this)'>
+        <div class='bar1'></div>
+        <div class='bar2'></div>
+        <div class='bar3'></div>
+    </div>
+    <div class='nav-mobile'>
+        <% for (var i in theme.menu) { %>
+            <a class='mobileLink display-none' href='<%- url_for(theme.menu[i]) %>'><%- i %></a>
+        <% } %>
     </div>
 </div>
