Replaced .mov image with a .mp4 converted video for Safari support

--- a/themes/custom/layout/_partial/video.ejs
+++ b/themes/custom/layout/_partial/video.ejs
@@ -1,6 +1,6 @@
 <div class="video">
     <video autoplay loop muted id="myVideo">
-        <source src='/css/images/axn-creative-web-video.MOV' type="video/mp4">
+        <source src='/css/images/axn-creative-web-video.mp4' type="video/mp4">
     </video>
 </div>
 <script>
