--- a/themes/custom/source/css/style.css
+++ b/themes/custom/source/css/style.css
@@ -24,38 +24,49 @@ main {
 }
 a {
     text-decoration: none;
-    color: rgb(94, 185, 192);
-    position: relative;
-    transition: 0.2s ease all;
+    color: white;
+	transition: 0.5s;
 }
-a::after {
-    content: '';
-    width: 0;
-    height: 2px;
-    background: black;
-    transition: width .3s;
-    position: absolute;
-    left: 0%;
-    top: 90%;
+.navMobile {
+    width: 100vw;
+    height: 0px;
+    transition: 0.4s ease-in;
 }
-a:hover {
-    color: black;
-}
-a:hover::after {
-    width: 100%;
-}
-h1, h2, h3, h4, h5, h6 {
-    text-align: center;
-}
-p {
-    text-align: center;
-}
-.site-title {
-    letter-spacing: 5px;
-    text-transform: uppercase;
-}
-.nav-mobile {
+
+.display-none {
     display: none;
+}
+.revealNavMobile {
+    -webkit-transition: 0.5s; /* Safari 4+ */
+    -moz-transition: 0.5s; /* Fx 5+ */
+    -o-transition: 0.5s; /* Opera 12+ */
+    transition: 0.5s; /* IE 10+, Fx 29+, */
+    height: 30vh;
+    border-bottom: 1px solid white;
+}
+.mobileLink {
+    text-align: right;
+    padding: 5px;
+    letter-spacing: 3px;
+    display: flex;
+    justify-content: center;
+    color: #EEE;
+    z-index: 2;
+    max-width: 100vw;
+}
+.mobileLink:hover {
+    background-color: #8AB0AB;
+    color: black;
+    transition: 0.1s;
+}
+.mobileSocial {
+    display: flex;
+    justify-content: center;
+    transform: translateY(40px);
+}
+.mobileSocial a:hover {
+    color: #8AB0AB;
+    background-color: black;
 }
 /* --- HERO STRIP --- */
 .video {
@@ -84,8 +95,8 @@ p {
     color: white;
     text-transform: uppercase;
 }
-.nav a:hover::after {
-    width: 0%;
+.nav a:hover {
+    color: orange;
 }
 .display-none {
     opacity: 0;
