--- a/themes/custom/source/css/style.css
+++ b/themes/custom/source/css/style.css
@@ -13,8 +13,6 @@ body {
     padding: 0;
     background-color: black;
     color: white;
-    max-width: 100%;
-    font-size: 1rem;
 }
 main {
     max-width: 100%;
@@ -24,56 +22,36 @@ main {
 }
 a {
     text-decoration: none;
-    color: white;
-	transition: 0.5s;
+    color: #a9D2D5;
+    position: relative;
 }
-.navMobile {
-    width: 100vw;
-    height: 0px;
-    transition: 0.4s ease-in;
+a::after {
+    content: '';
+    width: 0;
+    height: 2px;
+    background: black;
+    transition: width .3s;
+    position: absolute;
+    left: 0%;
+    top: 90%;
 }
-
-.display-none {
-    display: none;
+a:hover::after {
+    width: 100%;
 }
-.revealNavMobile {
-    -webkit-transition: 0.5s; /* Safari 4+ */
-    -moz-transition: 0.5s; /* Fx 5+ */
-    -o-transition: 0.5s; /* Opera 12+ */
-    transition: 0.5s; /* IE 10+, Fx 29+, */
-    height: 30vh;
-    border-bottom: 1px solid white;
+h1, h2, h3, h4, h5, h6 {
+    text-align: center;
 }
-.mobileLink {
-    text-align: right;
-    padding: 5px;
-    letter-spacing: 3px;
-    display: flex;
-    justify-content: center;
-    color: #EEE;
-    z-index: 2;
-    max-width: 100vw;
+p {
+    text-align: center;
 }
-.mobileLink:hover {
-    background-color: #8AB0AB;
-    color: black;
-    transition: 0.1s;
-}
-.mobileSocial {
-    display: flex;
-    justify-content: center;
-    transform: translateY(40px);
-}
-.mobileSocial a:hover {
-    color: #8AB0AB;
-    background-color: black;
+.site-title {
+    letter-spacing: 5px;
+    text-transform: uppercase;
 }
 /* --- HERO STRIP --- */
 .video {
     min-width: 100%;
     height: auto;
-    position: relative;
-    z-index: 5;
 }
 /* Style the video: 100% width and height to cover the entire window */
 #myVideo {
@@ -87,7 +65,6 @@ a {
     letter-spacing: 5px;
     position: -webkit-sticky; /* Safari */
     position: sticky;
-    z-index: 2;
     top: 0;
     background: black;
 }
@@ -95,19 +72,14 @@ a {
     color: white;
     text-transform: uppercase;
 }
-.nav a:hover {
-    color: orange;
-}
-.display-none {
-    opacity: 0;
-    transition: 0.9s;
+.nav a:hover::after {
+    width: 0%;
 }
 .navbar {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 80px;
-    width: 100vw;
 }
 .navlink {
     padding: 0 20px;
@@ -123,9 +95,6 @@ a {
     color: black;
     height: 100%;
     border-radius: 5%;
-}
-.hamburger {
-    display: none;
 }
 /* --- HEADER --- */
 
@@ -234,69 +203,13 @@ footer a:hover::after {
     }
 }
 @media only screen and (max-width: 900px) {
- /*-- idk --- */
-}
-@media only screen and (max-width: 770px) {
-    .sidebar {
-        flex-direction: column;
-        align-items: center;
-    }
-}
-@media only screen and (max-width: 640px) {
-    .nav {
-        display: flex;
-        flex-direction: row-reverse;
-        justify-content: flex-end;
-    }
-    .navbar {
-        display: none;
-        overflow: hidden;
-    }
-    .nav-mobile {
-        width: 100vw;
-        height: 0px;
-        transition: 0.6s ease-in;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        position: relative;
-        top: -80px;
-    }
-    .revealNavMobile {
-        -webkit-transition: 0.6s; /* Safari 4+ */
-        -moz-transition: 0.6s; /* Fx 5+ */
-        -o-transition: 0.6s; /* Opera 12+ */
-        transition: 0.6s; /* IE 10+, Fx 29+, */
-        height: 25vh;
-        transform: translatex(-20px) translateY(80px);
-    }
-    .mobileLink {
-        text-align: right;
-        padding: 5px;
-        letter-spacing: 3px;
-        color: #eee;
-        z-index: 5;
-        max-width: 100vw;
-        transition: 0.3s;
-    }
-    .mobileLink:hover {
-        color: rgb(94, 185, 192);
-    }
     .hamburger {
         display: inline-block;
         cursor: pointer;
         width: 20px;
         height: auto;
-        padding: 10px 40px 10px 10px;
     } 
-    .bar1, .bar3 {
-        width: 30px;
-        height: 4px;
-        background-color: white;
-        margin: 6px 0;
-        transition: 0.6s;
-    }
-    .bar2 {
+    .bar1, .bar2, .bar3 {
         width: 30px;
         height: 4px;
         background-color: white;
@@ -309,12 +222,18 @@ footer a:hover::after {
     }
     /*  translate(3px, -5px) */
     .change .bar2 {
-        transform: rotate(125deg) translateY(-10px) translateX(30px);
+        transform: translateX(-300px);
         opacity: 0;
     }
     .change .bar3 {
         -webkit-transform: rotate(45deg);
         transform: translateY(-10px) rotate(48deg);
     /*  translate(-9px, -12px) */
+    }
+}
+@media only screen and (max-width: 770px) {
+    .sidebar {
+        flex-direction: column;
+        align-items: center;
     }
 }
