--- a/themes/custom/layout/_partial/sidebar.ejs
+++ b/themes/custom/layout/_partial/sidebar.ejs
@@ -1,6 +1,8 @@
 <div class="sidebar">
     <div class="sidebar-module">
+        <i class="fas fa-pencil-ruler"></i>
         <h4>Recent</h4>
+        <hr>
         <ul class="list-styled">
             <% let posts = site.posts; %>
             <% let news = []; %>
@@ -15,7 +17,9 @@
         </ul>
     </div>
     <div class="sidebar-module">
+        <i class="fas fa-history"></i>
         <h4>Archives</h4>
+        <hr>
         <ul class="list-styled">
             <li><a href="#">March 2014</a></li>
             <li><a href="#">February 2014</a></li>
@@ -25,7 +29,9 @@
         </ul>
     </div>
     <div class="sidebar-module">
+        <i class="fas fa-location-arrow"></i>
         <h4>Elsewhere</h4>
+        <hr>
         <ul class="list-styled">
             <li><a href="#">Github</a></li>
             <li><a href="#">Twitter</a></li>
