--- a/themes/axon/layout/_partial/sidebar.ejs
+++ b/themes/axon/layout/_partial/sidebar.ejs
@@ -29,8 +29,8 @@
                     <% archiveLinks.push(item.path); %>
                 <% } %>
             <% }); %>
+            <% archiveDates.sort(); %>
             <% console.log(archiveDates) %>
-            <% console.log(archiveLinks) %>
             <% for (let i = 0; i < archiveDates.length; i++) { %>
                 <% if (i == 0) { %>
                     <li><a href="<%- config.root %><%- archiveLinks[0] %>"><%- archiveDates[0] %></a></li>
