--- a/themes/axon/layout/_partial/nav.ejs
+++ b/themes/axon/layout/_partial/nav.ejs
@@ -1,22 +1,24 @@
 <div class="nav">
-    <div class="brand">
-        
-    </div>
-    <div class="navbar">
-        <!-- Pull each menu item in from the local _config.yml file -->
-        <% for (var i in theme.menu) { %>
-            <a class='navlink' href='<%- url_for(theme.menu[i]) %>'><%- i %></a>
-        <% } %>
-    </div>
-    <div class="social">
-        <a href="#" target='_blank'></a>
-        <a href="#" target='_blank'></a>
-        <a href="#" target='_blank'></a>
-    </div>
-    <div class='hamburger' onclick='hamburgerClick(this)'>
-        <div class='bar1'></div>
-        <div class='bar2'></div>
-        <div class='bar3'></div>
+    <div class="nav-top">
+        <div class="brand">
+            <img src="/css/images/axn-creative-logo.PNG" alt="AXN Creative Logo">
+        </div>
+        <div class="navbar">
+            <!-- Pull each menu item in from the local _config.yml file -->
+            <% for (var i in theme.menu) { %>
+                <a class='navlink' href='<%- url_for(theme.menu[i]) %>'><%- i %></a>
+            <% } %>
+        </div>
+        <div class="social">
+            <a href="#" target='_blank'></a>
+            <a href="#" target='_blank'></a>
+            <a href="#" target='_blank'></a>
+        </div>
+        <div class='hamburger' onclick='hamburgerClick(this)'>
+            <div class='bar1'></div>
+            <div class='bar2'></div>
+            <div class='bar3'></div>
+        </div>
     </div>
     <div class='nav-mobile'>
         <% for (var i in theme.menu) { %>
