ADded TheraMind post

--- a/themes/axon/layout/_partial/nav.ejs
+++ b/themes/axon/layout/_partial/nav.ejs
@@ -22,7 +22,7 @@
     </div>
     <div class='nav-mobile'>
         <% for (var i in theme.menu) { %>
-            <a class='mobileLink display-none' href='<%- url_for(theme.menu[i]) %>'><%- i %></a>
+            <a class='mobileLink' href='<%- url_for(theme.menu[i]) %>'><%- i %></a>
         <% } %>
     </div>
 </div>
