--- a/themes/axon/source/css/style.css
+++ b/themes/axon/source/css/style.css
@@ -18,7 +18,7 @@ body {
 }
 main {
     max-width: 100%;
-    padding: 2vw 10vw;
+    padding: 2vw 0;
     background-color: #eee;
     color: black;
 }
@@ -260,6 +260,14 @@ footer a:hover::after {
     transform: translateY(-10px) scale(1.2);
     box-shadow: 0px 2px 9px 1px #999;
 }
+/* Service Cards */
+.services-strip {
+    width: 100%;
+    height: auto;
+    padding: 20px 0;
+}
+
+
 
 
 /* --- MEDIA QUERIES --- */
