--- a/themes/axon/source/css/style.css
+++ b/themes/axon/source/css/style.css
@@ -136,9 +136,12 @@ p {
 /* --- PROJECTS AND BLOG POSTS --- */
 .post-container {
     display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 }
 .post {
-    width: 30%;
+    width: 400px;
     height: 300px;
     box-shadow: 0px 2px 9px 1px #999;
     border-radius: 3%;
@@ -277,7 +280,7 @@ footer a:hover::after {
         justify-content: center;
     }
     .post {
-        width: 40%;
+        width: 400px;
         min-width: 340px;
     }
 }
