--- a/themes/axon/source/css/style.css
+++ b/themes/axon/source/css/style.css
@@ -271,6 +271,33 @@ footer a:hover::after {
     width: 100%;
     height: auto;
     padding: 20px 0;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background: none;
+}
+.services-strip svg {
+    width: 100%;
+    height: 25%;
+}
+.service-card {
+    border: 1px solid lightgrey;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 300px;
+    height: 300px;
+    padding: 20px;
+    position: relative;
+    overflow: hidden;
+}
+.service-card svg {
+    width: 80px;
+    height: 50px;
+    color: black;
+    position: relative;
 }
 
 
