Added wave SVGs to background, fixed services strip, touched up mobile responsiveness and logos

--- a/themes/axon/layout/_partial/nav.ejs
+++ b/themes/axon/layout/_partial/nav.ejs
@@ -1,7 +1,7 @@
 <div class="nav">
     <div class="nav-top">
         <div class="brand">
-            <img src="/css/images/axn-creative-logo.PNG" alt="AXN Creative Logo">
+            <img src="/css/images/axn-mobile-logo.png" alt="AXN Creative Logo">
         </div>
         <div class="navbar">
             <!-- Pull each menu item in from the local _config.yml file -->
