--- a/themes/axon/source/css/style.css
+++ b/themes/axon/source/css/style.css
@@ -73,7 +73,7 @@ p {
     letter-spacing: 5px;
     position: -webkit-sticky; /* Safari */
     position: sticky;
-    z-index: 2;
+    z-index: 5;
     top: 0;
     background: black;
 }
@@ -271,14 +271,33 @@ footer a:hover::after {
     width: 100%;
     height: auto;
     padding: 20px 0;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    background: none;
+    font-size: 0;
+    position: relative;
+    color: black;
+}
+.services-strip p {
+    text-align: center;
+    font-size: 1rem;
+    padding: 0 25%;
 }
 .services-strip svg {
     width: 100%;
-    height: 25%;
+    height: 50%;
+    padding: 0 0 0 0;
+    margin: 0 0 0 0;
+    position: relative;
+    top: -100px;
+}
+.card-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    background: none;
+    font-size: 1rem;
+    position: relative;
+    z-index: 2;
+    margin: 50px 0 0 0;
 }
 .service-card {
     border: 1px solid lightgrey;
@@ -289,15 +308,21 @@ footer a:hover::after {
     justify-content: center;
     width: 300px;
     height: 300px;
-    padding: 20px;
+    padding: 20px 20px 20px 20px;
+    margin: 10px;
     position: relative;
     overflow: hidden;
+}
+.service-card p {
+    padding: 10px 10px 10px 10px;
+    margin: 5px;
 }
 .service-card svg {
     width: 80px;
     height: 50px;
     color: black;
     position: relative;
+    top: 0;
 }
 
 
@@ -312,6 +337,21 @@ footer a:hover::after {
     .post {
         width: 400px;
         min-width: 340px;
+    }
+}
+@media only screen and (max-width: 1075px) {
+    .card-wrapper {
+        flex-direction: column;
+    }
+    .service-card {
+        padding: 20px 20px 5px 5px;
+    }
+    .services-strip svg {
+        height: 75%;
+        z-index: 3;
+    }
+    .service-card svg {
+        height: 50px;
     }
 }
 @media only screen and (max-width: 900px) {
@@ -348,17 +388,9 @@ footer a:hover::after {
     }
     .brand img {
         display: flex;
-        width: 70px;
+        width: 200px;
         height: auto;
-        border: 1px solid lightgrey;
-        border-radius: 100%;
-        -webkit-animation:spin 10s linear infinite;
-        -moz-animation:spin 10s linear infinite;
-        animation:spin 10s linear infinite;
     }
-    @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
-    @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
-    @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
     .navbar {
         display: none;
     }
