--- a/themes/axon/layout/_partial/home/services-strip.ejs
+++ b/themes/axon/layout/_partial/home/services-strip.ejs
@@ -23,10 +23,13 @@
             <p>Why stop with a nice new site? We employ a variety of different digital marketing techniques to drive traffic back to your site and bring in business.</p> 
         </div>
     </div>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#000000" fill-opacity="1" d="M0,320L80,288C160,256,320,192,480,192C640,192,800,256,960,245.3C1120,235,1280,149,1360,106.7L1440,64L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path>
-    </svg>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#000000" fill-opacity="1" d="M0,320L80,288C160,256,320,192,480,192C640,192,800,256,960,245.3C1120,235,1280,149,1360,106.7L1440,64L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"></path>
-    </svg>
+    <div class='svg-wrapper'>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#000000" fill-opacity="1" d="M0,320L80,288C160,256,320,192,480,192C640,192,800,256,960,245.3C1120,235,1280,149,1360,106.7L1440,64L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path>
+        </svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#000000" fill-opacity="1" d="M0,320L80,288C160,256,320,192,480,192C640,192,800,256,960,245.3C1120,235,1280,149,1360,106.7L1440,64L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"></path>
+        </svg>
+        <img src="/css/images/neuron.png" alt="Neuron Image">
+    </div>
 </div>
