--- a/themes/axon/source/css/style.css
+++ b/themes/axon/source/css/style.css
@@ -101,7 +101,7 @@ p {
     justify-content: center;
     align-items: center;
     height: 80px;
-    width: 100vw;
+    transition: 2s ease all;
 }
 .navlink {
     padding: 0 20px;
@@ -356,9 +356,6 @@ footer a:hover::after {
     }
 }
 @media only screen and (max-width: 1075px) {
-    .card-wrapper {
-        flex-direction: column;
-    }
     .service-card {
         padding: 20px 5px 20px 5px;
     }
@@ -395,6 +392,15 @@ footer a:hover::after {
         border-radius: 10px;
         padding: 10px 0;
         margin: 5px;
+    }
+}
+@media only screen and (max-width: 845px) {
+    .card-wrapper {
+        flex-direction: column;
+    }
+    .service-card {
+        padding: 20px 5px 20px 5px;
+        width: 90%;
     }
 }
 @media only screen and (max-width: 770px) {
