Added contact form with Formspree.io, needs respnosive design

--- a/themes/axon/layout/_partial/footer.ejs
+++ b/themes/axon/layout/_partial/footer.ejs
@@ -1,5 +1,10 @@
 <footer class="footer">
+    <div class='socials'>
+        <a href='https://www.instagram.com/axncreative/'><i class="fab fa-instagram"></i></a>
+        <a href='https://www.facebook.com/axncreative'><i class="fab fa-facebook-square"></i></a>
+        <a href='https://github.com/BranonConor'><i class="fab fa-github-square"></i></a>
+        <a href='https://www.linkedin.com/in/branonconor/'><i class="fab fa-linkedin"></i></a>
+    </div>
     <p>Web Design and Development by: <a href='<%- config.root %>'>AXN Creative</a></p>
     <p>Copyright <%- date(Date.now(), 'YYYY') %></p>
-    <p></p>
 </footer>
