--- a/themes/axon/layout/_partial/home/services-strip.ejs
+++ b/themes/axon/layout/_partial/home/services-strip.ejs
@@ -1,5 +1,5 @@
 <div class='services-strip'>
-    <p>Welcome. The AXN Creative, or 'Axon Creative', is a creative and technical endeavor to help businesses build and establish an optimal online presence.</p>
+    <p>Welcome. The AXN Creative, or 'Axon Creative', is a creative and technical endeavor specializing in maximizing the vitality of YOUR online presence.</p>
     <div class='card-wrapper'>
         <div class="service-card">
             <svg class="svg-icon" viewBox="0 0 20 20">
