Added responsive design at necessary breakpoints for contact form

--- a/themes/axon/layout/_partial/home/contact-strip.ejs
+++ b/themes/axon/layout/_partial/home/contact-strip.ejs
@@ -1,6 +1,7 @@
 <div class="form-strip" id='contact'>
-    <i class="fas fa-paper-plane fa-2x"></i>
-    <h2>I'd love to hear from you.</h2>
+    <hr>
+    <i class="fas fa-paper-plane"></i>
+    <h3 class='component-title'>I'd love to hear from you.</h3>
     <form id="fs-frm" class='contact-form' name="department-contact-form" accept-charset="utf-8" action="https://formspree.io/xrgarqvb" method="POST">
         <fieldset id="fs-frm-inputs">
             <div class='fieldset-wrapper'>
