--- a/themes/axon/source/css/style.css
+++ b/themes/axon/source/css/style.css
@@ -137,25 +137,30 @@ p {
     height: auto; 
 }
 /* --- PROJECTS AND BLOG POSTS --- */
+.projects {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .post-container {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    width: 90%;
 }
 .post {
     width: 400px;
     height: 300px;
-    box-shadow: 0px 2px 9px 1px #999;
     border-radius: 3%;
-    border: 3px solid rgba(230,230,230, 0);
+    border: 1px solid lightgrey;
     padding: 10px;
     margin: 10px;
     transition: 0.3s ease all;
     text-align: center;
 }
 .post:hover {
-    border: 3px solid rgba(230,230,230, 1);
     box-shadow: 0px 4px 10px 2px #eee;
     transform: translateY(-5px);
 }
