--- a/themes/axon/layout/_partial/nav.ejs
+++ b/themes/axon/layout/_partial/nav.ejs
@@ -8,7 +8,7 @@
             <% for (var i in theme.menu) { %>
                 <a class='navlink' href='<%- url_for(theme.menu[i]) %>'><%- i %></a>
             <% } %>
-            <a class='navlink' href='#contact'>Contact</a>
+            <a class='navlink' href='/#contact'>Contact</a>
         </div>
         <div class="social">
             <a href="#" target='_blank'></a>
