Added relative link path for contact page anchor on mobile

--- a/themes/axon/layout/_partial/nav.ejs
+++ b/themes/axon/layout/_partial/nav.ejs
@@ -25,6 +25,6 @@
         <% for (var i in theme.menu) { %>
             <a class='mobileLink' href='<%- url_for(theme.menu[i]) %>'><%- i %></a>
         <% } %>
-        <a class='mobileLink' href='#contact'>Contact</a>
+        <a class='mobileLink' href='/#contact'>Contact</a>
     </div>
 </div>
