--- a/themes/axon/source/css/style.css
+++ b/themes/axon/source/css/style.css
@@ -568,6 +568,7 @@ label {
         height: 0px;
         transition: 0.4s ease-in;
         display: flex;
+        background: #292929;
         flex-direction: column;
         justify-content: center;
         position: relative;
@@ -596,21 +597,27 @@ label {
     .hamburger {
         display: inline-block;
         cursor: pointer;
-        width: 20px;
+        width: 30px;
         height: auto;
-        padding: 10px 30px 10px 10px;
+        padding: 10px;
+        margin-right: 20px;
+        border: 1px dashed grey;
+        border-radius: 15px;
+        overflow: hidden;
     } 
     .bar1, .bar3 {
         width: 30px;
         height: 4px;
-        background-color: white;
+        background-color: #f2f2f2;
+        border-radius: 15px;
         margin: 6px 0;
         transition: 0.6s;
     }
     .bar2 {
         width: 30px;
         height: 4px;
-        background-color: white;
+        background-color: #f2f2f2;
+        border-radius: 15px;
         margin: 6px 0;
         transition: 0.5s;
     }
@@ -620,7 +627,7 @@ label {
     }
     /*  translate(3px, -5px) */
     .change .bar2 {
-        transform: rotate(125deg) translateY(-10px) translateX(30px);
+        transform: rotate(275deg);
         opacity: 0;
     }
     .change .bar3 {
