--- a/themes/axon/source/css/style.css
+++ b/themes/axon/source/css/style.css
@@ -164,6 +164,7 @@ p {
 }
 .post:hover {
     box-shadow: 0px 4px 10px 2px #eee;
+    border: 1px solid grey;
     transform: translateY(-5px);
 }
 .snippet {
@@ -281,7 +282,7 @@ footer a:hover::after {
     transition: 0.4s ease all;
 }
 .post:hover img {
-    transform: translateY(-10px) scale(1.2);
+    transform: translateY(-10px) scale(1.03);
     box-shadow: 0px 2px 9px 1px #999;
 }
 /* Service Cards */
@@ -462,6 +463,7 @@ label {
     cursor: pointer;
     color: white;
 }
+
 /* --------- FOOTER ----------- */
 .footer {
     padding: 10px;
