--- a/themes/axon/source/css/style.css
+++ b/themes/axon/source/css/style.css
@@ -168,7 +168,7 @@ p {
     transform: translateY(-5px);
 }
 .snippet {
-    width: 100;
+    width: 100%;
 }
 table {
     margin: auto;
@@ -178,7 +178,7 @@ table {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin: 0;
+    margin: 0px;
 }
 .sidebar-module {
     display: flex;
